added unit test for packet service